Avoid deprecated API in sample